# libTMCG-1.3.18

./: .gitignore  CMakeLists.txt  Makefile.in  README  aclocal.m4  configure  libTMCG_config.h.in
cmake/: libTMCG_config.h.in
doc/: Makefile.in  libTMCG.info
src/: Makefile.in
tests/: Makefile.in  t-poker-noninteractive.cc
